--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "countdown-angular1.x",
-  "main": "ng-ticker.js",
+  "main": "dist/countdown.min.js",
   "version": "1.0.0",
   "homepage": "https://github.com/lopn/countdown-angular1.x",
   "authors": [
