--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,9 @@
     "bower_components"
   ],
   "dependencies": {
-    "angular": "~1.4.7"
+    "angular": "~1"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1"
   }
 }
